fixed spacing on mobile

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -5,8 +5,7 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
     background: #111111;
     perspective: 500px;
 }
@@ -59,7 +58,7 @@ body {
     max-width: 100vw;
     max-height: 100vh;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 
 .home-page {
@@ -264,7 +263,8 @@ body {
         padding-left: 50px;
         padding-right: 50px;
         width: auto;
-        height: 100%;
+        height: auto;
+        margin-bottom: 0;
     }
     .main-underline {
         max-width: 70%;
@@ -273,6 +273,14 @@ body {
         max-width: 98%;
         margin: 0 auto;
         font-size: auto;
+    }
+    .footer-container {
+        padding: 0 0 50px 0;
+        margin-top: 0;
+    }
+    .tilt-container {
+        padding: 75px 0 0 0;
+        margin-bottom: 0;
     }
 }
 
